--- a/JavaScript_Dom/DOM_intro/styles/style.css
+++ b/JavaScript_Dom/DOM_intro/styles/style.css
@@ -1,3 +1,13 @@
-h1{
-    color: lightcoral;
+/** @format */
+
+h1 {
+  color: lightcoral;
+}
+
+.large-text {
+  font-size: 2em;
+}
+
+.text-center {
+  text-align: center;
 }
